radios: fixed wrapping

--- a/radios/1.0.0/tests/STG/assets/less/gui.less
+++ b/radios/1.0.0/tests/STG/assets/less/gui.less
@@ -1477,6 +1477,7 @@
 			padding-left: 38px;
 			display: table-cell;
 			vertical-align: middle;
+			white-space: normal;
 
 			&:hover {
 				cursor: pointer;
